设置Worker进程收到停止服务通知后最大等待时间

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "easyswoole/redis": "^1.3",
         "easyswoole/easyswoole": "^3.5",
         "ext-json": "*",
-        "ext-pcntl": "*"
+        "ext-pcntl": "*",
+        "ext-redis": "*"
     }
 }
